--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
-                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png" onclick="trackAppStoreClick('app_store')"></a>
                         </div>
                     </div>
                     {% include features.html %}
@@ -63,5 +63,42 @@
                 </div>
             </div>
         </div>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics-compat.js"></script>
+    
+    <script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDy2Mskq-BdD_c6MpZP2-Mf-d587C1wTQ",
+            authDomain: "charades-70520.firebaseapp.com",
+            projectId: "charades-70520",
+            storageBucket: "charades-70520.firebasestorage.app",
+            messagingSenderId: "788064883960",
+            appId: "1:788064883960:web:61ef5eff05ef0bd988970d",
+            measurementId: "G-CDC10KQ3J2"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const analytics = firebase.analytics();
+
+        // Track app store clicks
+        function trackAppStoreClick(store) {
+            analytics.logEvent('app_store_click', {
+                store_type: store,
+                page_location: window.location.pathname
+            });
+        }
+
+        // Track printable page views
+        function trackPrintableView() {
+            analytics.logEvent('printable_view', {
+                page_url: window.location.href,
+                timestamp: new Date().toISOString()
+            });
+        }
+    </script>
 </body>
 </html>
